--- a/website-src/download.css
+++ b/website-src/download.css
@@ -7,8 +7,39 @@
 }
 
 
+
+#welcome .menu a
+{
+    position: relative;
+    top:5.5vh;
+
+    border-radius: 2vh;
+    -webkit-border-radius: 2vh;
+    -o-border-radius: 2vh;
+    -moz-border-radius: 2vh;
+
+    padding: 1.3vh 2.5vh 1.3vh 2.5vh;
+
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #FFF;
+
+    /*border-style: solid;
+    border-width: 4px;
+    border-color: grey;*/
+
+    text-decoration: none;
+    /*padding:2vh;*/
+    font-weight: 300;
+    color:#FFF;
+    font-size:3.1vh;
+    transition: background-color 0.25s;
+}
+
+
 #welcome .menu a:hover
 {
     background-color: #FFA6A6;
 }
+
 
