Wheel: Use native scroll event instead of external dependency

--- a/website-src/layout.css
+++ b/website-src/layout.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: calibri, sans-serif;
     text-align: center;
     margin: 0;
 }
