--- a/sliding.css
+++ b/sliding.css
@@ -1,9 +1,9 @@
 #scrolling {
     position:fixed;
-    top:52%;
+    top:42%;
 
     background: #8601AF;
-    height: 48%;
+    height: 58%;
     width: 100%;
 
     overflow: hidden;
@@ -33,8 +33,8 @@ ul {
 li {
     font-size:8vmin;/*cool*/
     float: left;
-    width:25vw;
-    min-width: 250px;
+    width:55vw;
+    max-width: 750px;
     height: 100%;
     color: #8601AF;
     font-weight: 300;
